Enhanced 3D MC Presenter with professional features
 Enhanced Studio Lighting:
- Dynamic lighting system with key, fill, rim, and spot lights
- Real-time animated lighting effects
- Professional studio atmosphere

 Cinematic Camera System:
- 6 camera modes (default, closeup, wide, side, cinematic, overhead)
- Smooth cubic easing transitions
- Camera shake effects for dramatic moments

 Product Holding System:
- Hand bone tracking for left/right hands
- Automatic bone detection with fallback positioning
- Product attachment/detachment with world position preservation
- Floating animation for displayed products

 Enhanced Controls:
- New chat commands: 'cầm', 'hold', 'cinematic'
- Additional HTML control button for product holding
- All original features preserved (lip-sync, AI control, animations)

Ready for professional livestreaming with interactive product demonstrations!

--- a/mc-presenter.html
+++ b/mc-presenter.html
@@ -92,6 +92,7 @@
     <button class="control-btn" onclick="playAnimation('Gesture')">🤚 Gesture</button>
     <button class="control-btn" onclick="toggleCamera()">📷 Camera</button>
     <button class="control-btn" onclick="showProduct()">📦 Show Product</button>
+    <button class="control-btn" onclick="toggleProductHolding()">✋ Hold Product</button>
   </div>
 
   <div id="chatBox">
